brat/test/golden/kernel/typed_th.brat.golden
Error in test/golden/kernel/typed_th.brat@FC {start = Pos {line = 5, col = 17}, end = Pos {line = 5, col = 24}}:
id2 = { let f = {id;id} in q,q' => f(q),f(q') }
                ^^^^^^^

  Thunks not allowed in kernels: {:id()(「id()」):}

